fix alignment

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -26,7 +26,7 @@
         width: 100%
     }
     #home .home-text-column {
-        text-align: left;
+        text-align: center;
         width: 100%;
     }
     .direction-row {
